--- a/nodefront/src/app/app.html
+++ b/nodefront/src/app/app.html
@@ -1,3 +1,13 @@
-<h1 class="emp">HALLO!</h1>
-<button>.</button>
-<p>.</p>
+<div id="cc">
+    <div id="header">
+        <a id="root-link" [routerLink]="['/']">
+            <span id="node">Numbered Object Device Entry</span>
+        </a>
+    </div>
+    <div id="main">
+        <router-outlet></router-outlet>
+    </div>
+    <div id="footer">
+        
+    </div>
+</div>
