--- a/nodefront/src/app/app.html
+++ b/nodefront/src/app/app.html
@@ -1,7 +1,8 @@
 <div id="cc">
     <div id="header">
         <a id="root-link" [routerLink]="['/']">
-            <span id="node">Numbered Object Device Entry</span>
+            <img src="NODEmono.png" height="100%" alt="logo">
+            <span id="node">N-O-D-E</span>
         </a>
     </div>
     <div id="main">
