--- a/nodefront/src/app/app.css
+++ b/nodefront/src/app/app.css
@@ -13,35 +13,32 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    border-radius: 5px;
     justify-content: space-between;
-    border-radius: 0 0 10px 10px;
-    padding: 0 40px;
+    padding: 5px 15px;
     position: sticky;
+    top: 10px;
+    margin: 10px;
     z-index: 1000;
     background-color: var(--bgc);
     border: 1px solid var(--bc);
-    box-shadow: 0px 0px 30px var(--bsc);
-}
-
-#header img {
-    filter: brightness(1) invert(100%);
-    height: 70px
+    box-shadow: 0px 0px 10px var(--bsc);
 }
 
 #header span {
-    font-size: 3em;
+    font-size: 2em;
 }
 
 #footer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    border-radius: 5px;
     font-size: 1.5em;
-    border-radius: 10px;
     margin: 10px;
     padding: 10px;
     z-index: 1000;
     background-color: var(--bgc);
     border: 1px solid var(--bc);
-    box-shadow: 0px 0px 30px var(--bsc);
+    box-shadow: 0px 0px 10px var(--bsc);
 }
