--- a/nodefront/src/styles.css
+++ b/nodefront/src/styles.css
@@ -10,6 +10,7 @@
     background-color: var(--black);
     color: var(--white);
 }
+
 /*lösch das wenn themes implementiert sind*/
 body {
     --bgc: #fff;
@@ -43,9 +44,9 @@ body {
     color: var(--tc);
     margin: 0;
     padding: 0;
-    font-family: "Funnel Display", sans-serif;
+    font-family: "Lexend", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 400;
     font-style: normal;
     display: flex;
     flex-direction: column;
@@ -91,14 +92,26 @@ a:hover {
     padding-bottom: 50px;
 }
 
-button .primary {
-
+button {
+    font-family: "Lexend", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1em;
+    background-color: var(--bgc);
+    border: 1px solid var(--bgc);
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px var(--bsc);
+    margin: 10px 0;
+    padding: 3px 6px;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
-button .secondary {
-
+button:hover {
+    background-color: var(--tc);
+    color: var(--bgc)
 }
 
-button .important {
+button.secondary {}
 
-}
+button.important {}
